# rsume

./: .gitignore  Cargo.toml  LICENSE.md  README.md  check_pdf.py
examples/: full.yaml
locales/: en-US.yaml  en-US.yml  es-ES.yml
src/: cli.rs  config.rs  generate.rs  l10n.rs  live.rs  main.rs  templates.rs  validate.rs
src/models/: core.rs  flexible_date.rs  jsonresume.rs  mod.rs  output.rs  resolve.rs  source.rs
templates/basic/: main.hbs  styles.hbs  styles.hbs.map  styles.scss
templates/common/: style.css
