[package]
name = "rsume"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.0" }
toml = { version = "^0.4" }
time = { version = "^0.3", features = ["formatting", "serde"] }
url = { version = "^2.5", features = ["serde"] }
schemars = { version = "0.8.21", features = ["url"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
clap = { version = "4.5.9", features = ["derive"] }
handlebars = "6.0.0"
notify = "8.0.0"
notify-debouncer-full = "0.5.0"
smol = "2.0.2"
tide = "0.16.0"
color-eyre = "0.6.5"
colored = "3.0.0"
log = "0.4.27"
colog = "1.3.0"
fluent = "0.17.0"
fluent-templates = { version = "0.13.1", features = ["handlebars"] }
headless_chrome = "1.0.16"
tempfile = "3.21.0"
rust-i18n = "3.1.5"
